<resources>
    <string name="app_name">BunonBasket</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="home" translatable="false">Home</string>
    <string name="wishlist" translatable="false">WishList</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="account" translatable="false">Account</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="action_notifications" translatable="false">Notifications</string>
    <string name="brands" translatable="false">Brands</string>
    <string name="all_categories" translatable="false">All Categories</string>
    <string name="quantity" translatable="false">Qty: </string>
    <string name="price" translatable="false">"\u09F3"</string>
    <string name="featured_products" translatable="false">Featured Products</string>
    <string name="best_selling" translatable="false">Best Selling</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="view_all" translatable="false">View All</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="error_message" translatable="false">Error message</string>
    <string name="upload_bazar_list" translatable="false">Upload Bazar List</string>
    <string name="click_bajar_pic">বাজার সামগ্রী তালিকার ছবি তুলুন</string>
    <string name="confirm_order">অর্ডার কনফার্ম করুন</string>
    <string name="upload_bazar_message">আপনি বাজার তালিকাটি কনফার্ম করার পর একজন বুনন বাস্কেট প্রতিনিধি অর্ডারটি নিশ্চিত করবেন</string>
    <string name="number_one">১</string>
    <string name="number_two">২</string>
    <string name="open_gallery" translatable="false">Open Gallery</string>
    <string name="open_camera" translatable="false">Open Camera</string>
    <string name="upload_image_using_button">এই বাটনের সাহায্যে আপনার বাজার তালিকার ছবি তুলুন</string>
    <string name="got_it">ঠিক আছে</string>
    <string name="products" translatable="false">Product List</string>
    <string name="add_to_cart" translatable="false">Add To Cart</string>
    <string name="in_stock" translatable="false">In Stock</string>
    <string name="out_of_stock" translatable="false">Out of Stock</string>
    <string name="size" translatable="false">Size</string>
    <string name="price_title" translatable="false">Price</string>
    <string name="quantity_title" translatable="false">Quantity:</string>
    <string name="_1" translatable="false">1</string>
    <string name="description" translatable="false">Description</string>
    <string name="description_body" translatable="false">Description not available</string>
    <string name="log_in" translatable="false">Log In</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="rating" translatable="false">Rate Our App</string>
    <string name="login" translatable="false">Login</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="password" translatable="false">Password</string>
    <string name="_018xxxxxxxx" translatable="false">018xxxxxxxx</string>
    <string name="forget_password" translatable="false">Forget Password?</string>
    <string name="don_t_have_an_account_please_sign_up" translatable="false">Don\'t have an account? Please Sign up</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="order_history">Order History</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="language_address">Language</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="_880">+880</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="by_continuing">By continuing you agree to our Terms of Service and Privacy Policy.</string>
    <string name="color">Color</string>
    <string name="check_out">Check out</string>
    <string name="total">Total:</string>
    <string name="apply">Apply</string>
    <string name="apply_code">Coupon Code</string>
    <string name="order_cart">Order Cart</string>
    <string name="shipping_info">Shipping Info</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="postal_code">Postal Code</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="Items">Items</string>
    <string name="order_placed">Order Placed</string>
    <string name="checkout_message">Your order was placed successfully. For more details, Check Delivery Status under profile tab.</string>
    <string name="save">Save</string>
    <string name="order_status">Order Status</string>
    <string name="no_order_found">No Order Found</string>
    <string name="taka">\u09F3</string>
    <string name="order_no">Order No:</string>
    <string name="created_at">Created at:</string>
    <string name="add_new_shipping_address">Add New Shipping Address</string>
    <string name="logout">Log out</string>
    <string name="our_partners">Our Partners</string>
    <string name="no_wishList_found">Add to wishlist</string>
    <string name="place_order">Place Order</string>


</resources>