<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/wishListFragment"
        android:title="@string/wishlist"
        app:showAsAction="always"
        android:icon="@drawable/ic_wishlist"/>

    <item android:id="@+id/cartFragment"
        android:title="@string/cart"
        app:showAsAction="always"
        android:icon="@drawable/ic_cart"/>

    <item android:id="@+id/accountFragment"
        android:title="@string/account"
        app:showAsAction="always"
        android:icon="@drawable/ic_account"/>
</menu>