<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_white"
            tools:context=".ui.component.bazar.UploadBazarActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="@dimen/margin_small"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:paddingEnd="@dimen/standard_margin"
                        android:paddingRight="@dimen/standard_margin"
                        android:src="@drawable/ic_bell" />

                    <TextView
                        android:id="@+id/toolbarTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/poppins"
                        android:gravity="center_horizontal"
                        android:text="@string/upload_bazar_list"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/bazarImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/bajar_list_height"
                android:src="@drawable/bazar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintVertical_bias="0.107" />

            <LinearLayout
                android:id="@+id/order_message_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_60"
                android:layout_marginLeft="@dimen/size_60"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bazarImage"
                app:layout_constraintVertical_bias="0.145">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:layout_marginRight="@dimen/margin_small"
                        android:gravity="start"
                        android:text="@string/number_one"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/orange" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/click_bajar_pic"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/green" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:layout_marginRight="@dimen/margin_small"
                        android:gravity="start"
                        android:text="@string/number_two"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/orange" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/confirm_order"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/green" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/representative_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:background="@drawable/light_grey_box"
                android:padding="@dimen/standard_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_message_section"
                app:layout_constraintVertical_bias="0.137">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_bazar_message" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24"
                android:layout_marginBottom="@dimen/standard_margin"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_section">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_size"
                        android:backgroundTint="@color/green_opacity"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        app:backgroundTint="@color/green_opacity"
                        app:icon="@drawable/ic_gallery"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/open_gallery"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAlignment="center" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/standard_margin"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_size"
                        android:backgroundTint="@color/green"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        app:backgroundTint="@color/green"
                        app:icon="@drawable/camera"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/open_camera"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>